# actix-demo

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.yaml
.sqlx/: query-3ad5e14bf2103c797d5858b80c58903b04c8f4d00515f9be2d6e81c2444c8cde.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20241225030015_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
