[package]
name = "actix-demo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "actix-demo"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.9"
