[package]
name = "actix-demo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "actix-demo"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.39"
config = "0.15.4"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
	"runtime-tokio",
	"chrono",
	"postgres",
	"uuid",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.9"
