[package]
name = "actix-demo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "actix-demo"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.39"
claim = "0.5.0"
config = "0.15.4"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
	"runtime-tokio",
	"chrono",
	"postgres",
	"uuid",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
	"env-filter",
	"registry",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.19.0"
fake = "~2.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"

[dev-dependencies]
reqwest = "0.12.9"
